I resolved a z-index depth issue on my stylesheet

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -138,6 +138,7 @@ a:hover {
     align-items: center;
     background-color: rgba(0,0,0,.93);
     padding: 0.65em 0;
+    z-index: 1000;
 }
 
 .banner>.comp-logo-ham a {
